<resources>
    <string name="app_name">RSUBD</string>
    <string name="action_settings">Снести БД</string>
    <string name="action_setup">Досоздать сущности</string>

    <string name="menu_views">Представления</string>
    <string name="menu_views_doctor">Доктора</string>
    <string name="menu_views_patient">Пациенты</string>
    <string name="menu_views_disease">Болезни</string>

    <string name="menu_diagnosis">Диагнозы</string>
    <string name="menu_diploma">Дипломы</string>
    <string name="menu_diseases">Болезни</string>
    <string name="menu_doctors">Врачи</string>
    <string name="menu_history">Истории посещения</string>
    <string name="menu_patients">Пациенты</string>
    <string name="menu_qualification">Квалификации</string>
    <string name="menu_social_status">Соц статус</string>
    <string name="menu_specialization">Специализации</string>
    <string name="menu_state">Состояния</string>
    <string name="menu_treatment">Лечения</string>
    <string name="menu_person">Люди</string>
    <string name="patients_header">Пациенты</string>

    <string name="menu_save">Сохранить</string>
    <string name="login_auth_button_title">Войти</string>
    <string name="login_login_field_title">Логин</string>
    <string name="login_password_field_title">Пароль</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
