<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_person" />
    </group>

    <item android:title="@string/menu_doctors">
        <menu>
            <item
                android:id="@+id/nav_doctors"
                android:icon="@drawable/ic_doctor"
                android:title="@string/menu_doctors" />
            <item
                android:id="@+id/nav_diploma"
                android:icon="@drawable/ic_diploma"
                android:title="@string/menu_diploma" />
            <item
                android:id="@+id/nav_specialization"
                android:icon="@drawable/ic_specialization"
                android:title="@string/menu_specialization" />
            <item
                android:id="@+id/nav_qualification"
                android:icon="@drawable/ic_qualification"
                android:title="@string/menu_qualification" />
        </menu>
    </item>

    <item android:title="@string/menu_patients">
        <menu>
            <item
                android:id="@+id/nav_patients"
                android:icon="@drawable/ic_patient"
                android:title="@string/menu_patients" />
            <item
                android:id="@+id/nav_state"
                android:icon="@drawable/ic_treatment"
                android:title="@string/menu_state" />
            <item
                android:id="@+id/nav_social_status"
                android:icon="@drawable/ic_social_status"
                android:title="@string/menu_social_status" />
        </menu>
    </item>

    <item android:title="@string/menu_diagnosis">
        <menu>
            <item
                android:id="@+id/nav_diagnosis"
                android:icon="@drawable/ic_diagnosis"
                android:title="@string/menu_diagnosis" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/menu_history" />
            <item
                android:id="@+id/nav_treatment"
                android:icon="@drawable/ic_treatment"
                android:title="@string/menu_treatment" />
            <item
                android:id="@+id/nav_diseases"
                android:icon="@drawable/ic_disease"
                android:title="@string/menu_diseases" />
        </menu>
    </item>

    <item android:title="@string/menu_views">
        <menu>
            <item
                android:id="@+id/nav_view_doctor"
                android:icon="@drawable/ic_doctor"
                android:title="@string/menu_views_doctor" />
        </menu>
    </item>

</menu>
