<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_login_field_title"
            app:errorTextAppearance="@style/Text.Error.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_et"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_field_title"
            app:errorTextAppearance="@style/Text.Error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_auth_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:background="@drawable/selector_auth_btn"
        android:drawablePadding="10dp"
        android:paddingStart="45dp"
        android:paddingTop="12dp"
        android:paddingEnd="45dp"
        android:paddingBottom="12dp"
        android:text="@string/login_auth_button_title"
        android:textAppearance="@style/Text.Medium.16.PrimaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>